# hello_world_from_any_language_in_the_rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
examples/: friendbear.rs
examples/e01-hello-world-friendbear/: Cargo.toml
examples/e01-hello-world-friendbear/src/: main.rs
src/: lib.rs  main.rs
